// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetDetailPage TargetDetailPage should render data correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background: rgba(219, 241, 255, 0.46); position: relative; height: 120px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          cf.shared.targetManagement: pipeline.targets.title
        </a>
        <span>
          /
        </span>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="margin-left: -5px;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="border-radius: 50%; overflow: hidden;"
        >
          <div
            class="avatar Avatar--Avatar Avatar--contentStyle"
            style="cursor: default;"
          >
            <span
              class="bp3-popover-wrapper Avatar--avatarPopOver"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="Avatar--AvatarInner"
                  style="border-radius: 100%; line-height: 42px; width: 48px; height: 48px; font-size: 18px;"
                  tabindex="0"
                >
                  T
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 20px;"
            >
              t1
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="background-color: rgb(239, 251, 255); margin-bottom: 0px; padding: 4px 8px; border-radius: 4px; font-size: 12px; line-height: 15px; color: rgb(34, 34, 42); border: 1px solid #d9dae6;"
            >
              t1
              <button
                style="background: none; padding: 0px; transform: translateY(-2px); cursor: pointer;"
                title="clickToCopy"
              >
                <span
                  class="bp3-icon bp3-icon-duplicate StyledProps--main StyledProps--color StyledProps--color-grey350"
                  icon="duplicate"
                >
                  <svg
                    data-icon="duplicate"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      duplicate
                    </desc>
                    <path
                      d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--padding-top-xsmall"
          >
            cf.targetDetail.createdOnDate
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 15px; right: 25px;"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 76px; right: 30px;"
    >
      <span>
        cf.targetDetail.environmentLine
      </span>
    </p>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100% - 120px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="flex-grow: 1; height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--margin-left-xxlarge StyledProps--margin-top-large StyledProps--margin-bottom-large"
          style="width: 230px;"
        >
          <div
            class="StyledProps--font StyledProps--main gitRepoText"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="repository"
            >
              <svg
                height="16"
                viewBox="0 0 13 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main verticalDivider"
          />
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="branchActionButton"
                >
                  <div
                    class="StyledProps--font StyledProps--main branchActionButtonWrapper"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="15"
                        viewBox="0 0 13 16"
                        width="15"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900"
                    >
                      
                    </p>
                    <div
                      class="StyledProps--font StyledProps--main gitStatusIcon"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main autoCommitDisabled"
                            data-testid="auto-commit-status-icon"
                            icon="full-circle"
                            tabindex="0"
                          >
                            <svg
                              data-icon="full-circle"
                              height="10"
                              viewBox="0 0 16 16"
                              width="10"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main targetSettings"
          style="background: rgb(248, 250, 251); overflow: auto; min-width: 480px; width: 480px; height: 100%;"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
            level="3"
            style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; padding-bottom: 0px;"
          >
            <span
              class="align"
              data-tooltip-id="ff_targetTargetSettings_heading"
            >
              cf.targetDetail.targetSetting
            </span>
          </h3>
          <div
            class="StyledProps--font StyledProps--main tabContainer"
          >
            <div
              class="bp3-tabs Tabs--main Tabs--horizontal"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_attributes"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="attributes"
                  id="bp3-tab-title_targetSettings_attributes"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.targetDetail.attributes
                  </p>
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_segments"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="segments"
                  id="bp3-tab-title_targetSettings_segments"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.shared.segments
                  </p>
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_targetSettings_attributes"
                class="bp3-tab-panel"
                id="bp3-tab-panel_targetSettings_attributes"
                role="tabpanel"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge StyledProps--padding-left-small StyledProps--padding-right-small"
                    style="color: rgb(107, 109, 133); font-size: 12px; line-height: 150%;"
                  >
                    <span>
                      cf.targetDetail.learnMore
                    </span>
                  </p>
                  <div
                    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-medium"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      cf.targetDetail.attribute
                    </p>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                      style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                        style="color: rgb(34, 34, 42); font-size: 12px; font-weight: 500; line-height: 16px;"
                      >
                        identifier
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="line-height: 24px;"
                      >
                        t1
                      </p>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                      style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                        style="color: rgb(34, 34, 42); font-size: 12px; font-weight: 500; line-height: 16px;"
                      >
                        name
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="line-height: 24px;"
                      >
                        t1
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="overflow: auto; flex-grow: 1; background: rgb(252, 253, 253); flex-direction: column; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
            style="width: 100%; position: sticky; top: 0px; z-index: 2; background: rgb(252, 253, 253);"
          >
            <h3
              class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
              level="3"
              style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; align-self: baseline;"
            >
              <span
                class="align"
                data-tooltip-id="ff_targetFlagSettings_heading"
              >
                cf.targetDetail.flagSetting
              </span>
            </h3>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main"
              style="align-self: baseline; height: 35px;"
            >
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main    ExpandingSearchInput--light"
                data-name=""
              >
                <span
                  class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                  data-icon="thinner-search"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input  ExpandingSearchInput--filter"
                  dir="auto"
                  placeholder="cf.targetDetail.searchPlaceholder"
                  style="padding-right: 0px;"
                  type="search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
            style="flex-grow: 1; width: 100%; display: flex; flex-direction: column; position: relative;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TargetDetailPage TargetDetailPage should render its segments 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background: rgba(219, 241, 255, 0.46); position: relative; height: 120px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          cf.shared.targetManagement: pipeline.targets.title
        </a>
        <span>
          /
        </span>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="margin-left: -5px;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="border-radius: 50%; overflow: hidden;"
        >
          <div
            class="avatar Avatar--Avatar Avatar--contentStyle"
            style="cursor: default;"
          >
            <span
              class="bp3-popover-wrapper Avatar--avatarPopOver"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="Avatar--AvatarInner"
                  style="border-radius: 100%; line-height: 42px; width: 48px; height: 48px; font-size: 18px;"
                  tabindex="0"
                >
                  T
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="font-size: 20px;"
            >
              t1
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="background-color: rgb(239, 251, 255); margin-bottom: 0px; padding: 4px 8px; border-radius: 4px; font-size: 12px; line-height: 15px; color: rgb(34, 34, 42); border: 1px solid #d9dae6;"
            >
              t1
              <button
                style="background: none; padding: 0px; transform: translateY(-2px); cursor: pointer;"
                title="clickToCopy"
              >
                <span
                  class="bp3-icon bp3-icon-duplicate StyledProps--main StyledProps--color StyledProps--color-grey350"
                  icon="duplicate"
                >
                  <svg
                    data-icon="duplicate"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      duplicate
                    </desc>
                    <path
                      d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--padding-top-xsmall"
          >
            cf.targetDetail.createdOnDate
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 15px; right: 25px;"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 76px; right: 30px;"
    >
      <span>
        cf.targetDetail.environmentLine
      </span>
    </p>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100% - 120px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="flex-grow: 1; height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--margin-left-xxlarge StyledProps--margin-top-large StyledProps--margin-bottom-large"
          style="width: 230px;"
        >
          <div
            class="StyledProps--font StyledProps--main gitRepoText"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="repository"
            >
              <svg
                height="16"
                viewBox="0 0 13 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
            >
              
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main verticalDivider"
          />
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="branchActionButton"
                >
                  <div
                    class="StyledProps--font StyledProps--main branchActionButtonWrapper"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="git-new-branch"
                    >
                      <svg
                        height="15"
                        viewBox="0 0 13 16"
                        width="15"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900"
                    >
                      
                    </p>
                    <div
                      class="StyledProps--font StyledProps--main gitStatusIcon"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main autoCommitDisabled"
                            data-testid="auto-commit-status-icon"
                            icon="full-circle"
                            tabindex="0"
                          >
                            <svg
                              data-icon="full-circle"
                              height="10"
                              viewBox="0 0 16 16"
                              width="10"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main targetSettings"
          style="background: rgb(248, 250, 251); overflow: auto; min-width: 480px; width: 480px; height: 100%;"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
            level="3"
            style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; padding-bottom: 0px;"
          >
            <span
              class="align"
              data-tooltip-id="ff_targetTargetSettings_heading"
            >
              cf.targetDetail.targetSetting
            </span>
          </h3>
          <div
            class="StyledProps--font StyledProps--main tabContainer"
          >
            <div
              class="bp3-tabs Tabs--main Tabs--horizontal"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_attributes"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="attributes"
                  id="bp3-tab-title_targetSettings_attributes"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.targetDetail.attributes
                  </p>
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_segments"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="segments"
                  id="bp3-tab-title_targetSettings_segments"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.shared.segments
                  </p>
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_targetSettings_segments"
                class="bp3-tab-panel"
                id="bp3-tab-panel_targetSettings_segments"
                role="tabpanel"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                    style="align-items: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      <span
                        class="align"
                        data-tooltip-id="ff_targetTargetGroups_manuallyAdded"
                      >
                        cf.targetDetail.manuallyAdded
                      </span>
                    </p>
                    <span
                      style="flex-grow: 1;"
                    />
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.targetDetail.addToSegment
                      </span>
                    </button>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-xsmall StyledProps--color StyledProps--color-grey400"
                      style="text-align: center;"
                    >
                      cf.targetDetail.noSegmentAdded
                    </p>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                    style="align-items: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      <span
                        class="align"
                        data-tooltip-id="ff_targetTargetGroups_exclusionList"
                      >
                        cf.targetDetail.exclusionList
                      </span>
                    </p>
                    <span
                      style="flex-grow: 1;"
                    />
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.targetDetail.excludefromSegment
                      </span>
                    </button>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-xsmall StyledProps--color StyledProps--color-grey400"
                      style="text-align: center;"
                    >
                      cf.targetDetail.noSegmentExcluded
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="overflow: auto; flex-grow: 1; background: rgb(252, 253, 253); flex-direction: column; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
            style="width: 100%; position: sticky; top: 0px; z-index: 2; background: rgb(252, 253, 253);"
          >
            <h3
              class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
              level="3"
              style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; align-self: baseline;"
            >
              <span
                class="align"
                data-tooltip-id="ff_targetFlagSettings_heading"
              >
                cf.targetDetail.flagSetting
              </span>
            </h3>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main"
              style="align-self: baseline; height: 35px;"
            >
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main    ExpandingSearchInput--light"
                data-name=""
              >
                <span
                  class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                  data-icon="thinner-search"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input  ExpandingSearchInput--filter"
                  dir="auto"
                  placeholder="cf.targetDetail.searchPlaceholder"
                  style="padding-right: 0px;"
                  type="search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
            style="flex-grow: 1; width: 100%; display: flex; flex-direction: column; position: relative;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
